--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,15 @@
 {
-<<<<<<< HEAD
-  "name": "task-manager-backend",
+  "name": "liga-de-padel-backend",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-  "start": "node backend/server.js"
+    "start": "node index.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "cors": "^2.8.5"
-=======
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
->>>>>>> origin/from-local-20251022-165548
   }
 }
