Mejoras de diseño y funcionalidad: nueva identidad visual, logo, botones de cancelar, edición de torneos y validación de usuarios inactivos
- Agregado logo de Liga de Padel de Bogotá en login y banner principal
- Implementada nueva paleta de colores:
  * Banner: #042653 (azul marino)
  * Encabezados de tablas: #092B58 (azul marino oscuro) con texto blanco
  * Botones principales: #D0DC30 (verde lima) con texto #042653
  * Botones cancelar: #901518 (rojo oscuro)
- Agregados botones de cancelar en todos los formularios (clubes, deportistas, usuarios, torneos)
- Implementada funcionalidad de edición en módulo de torneos con botón editar
- Agregada validación de usuarios inactivos en el login (status inactivo bloquea acceso)
- Removidos títulos redundantes de listas para diseño más limpio
- Mejorada consistencia visual en encabezados de todas las tablas
- Configuración de desarrollo actualizada para entorno local

--- a/api/.env
+++ b/api/.env
@@ -1,47 +1,47 @@
 # Bluehost Production Environment Configuration
 
-# Database Configuration
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=ajkyinmy_liga_padel_app
-DB_USERNAME=ajkyinmy_user_app
-DB_PASSWORD=pwd_l1g4_app
-
-# Application Configuration
-APP_NAME="Liga de Padel"
-APP_ENV=production
-APP_DEBUG=false
-APP_URL=https://ligadepadeldebogotaoficial.com/LPBApp
-APP_TIMEZONE=America/Bogota
-
-# Security
-APP_KEY=base64:THFXfPSG/Mq5ld45YF7xcBOjCGfQ9zS6QtiXt3z+Mfw=
-JWT_SECRET=L1gaDePadelDeBogota
-
-# CORS Configuration for production
-CORS_ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
-
-# Cache and Session (for production optimization)
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-
-# Email Configuration (if needed)
-MAIL_DRIVER=smtp
-MAIL_HOST=mail.your-domain.com
-MAIL_PORT=587
-MAIL_USERNAME=noreply@your-domain.com
-MAIL_PASSWORD=your_email_password
-MAIL_ENCRYPTION=tls
-
-
-#APP_ENV=local
-#APP_KEY=base64:changeme
+# Database Configuration (PRODUCTION - commented for development)
 #DB_CONNECTION=mysql
-#DB_HOST=db
+#DB_HOST=localhost
 #DB_PORT=3306
-#DB_DATABASE=liga
-#DB_USERNAME=liga
-#DB_PASSWORD=secret
+#DB_DATABASE=ajkyinmy_liga_padel_app
+#DB_USERNAME=ajkyinmy_user_app
+#DB_PASSWORD=pwd_l1g4_app
+
+# Application Configuration (PRODUCTION - commented for development)
+#APP_NAME="Liga de Padel"
+#APP_ENV=production
+#APP_DEBUG=false
+#APP_URL=https://ligadepadeldebogotaoficial.com/LPBApp
+#APP_TIMEZONE=America/Bogota
+
+# Security (PRODUCTION - commented for development)
+#APP_KEY=base64:THFXfPSG/Mq5ld45YF7xcBOjCGfQ9zS6QtiXt3z+Mfw=
 #JWT_SECRET=L1gaDePadelDeBogota
+
+# CORS Configuration for production (PRODUCTION - commented for development)
+#CORS_ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
+
+# Cache and Session (for production optimization) (PRODUCTION - commented for development)
+#CACHE_DRIVER=file
+#SESSION_DRIVER=file
+
+# Email Configuration (if needed) (PRODUCTION - commented for development)
+#MAIL_DRIVER=smtp
+#MAIL_HOST=mail.your-domain.com
+#MAIL_PORT=587
+#MAIL_USERNAME=noreply@your-domain.com
+#MAIL_PASSWORD=your_email_password
+#MAIL_ENCRYPTION=tls
+
+# DEVELOPMENT CONFIGURATION (ACTIVE)
+APP_ENV=local
+APP_KEY=base64:changeme
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=liga
+DB_USERNAME=liga
+DB_PASSWORD=secret
+JWT_SECRET=L1gaDePadelDeBogota
 
